--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
 
     <!-- Main Alarm Menu -->
     <string name="action_save">Save</string>
+    <string name="action_color">Color</string>
+    <string name="action_days">days</string>
     <string name="action_calendar">Delete</string>
 
     <!-- Edit Alarm Menu -->
